app/static/css/style.css
@font-face {
    font-family: GlacialIndifferenceRegular;
    src: url(fonts/GlacialIndifference-Regular.otf);

}
@font-face {
    font-family: GlacialIndifferenceBold;
    src: url(fonts/GlacialIndifference-Bold.otf);
}
:root {
    --primary: #67C5D2;
    --detail-font: #FC8476;
}

* {
    font-family: "GlacialIndifferenceRegular";
    font-weight: normal;
    font-style: normal;
}

h1 {
    font-weight: bold;
}

h2 {
    font-weight: bold;
    font-style: bold;
}

ul {
    font-weight: bold;
    font-style: italic;
}

.center {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    /*width: 50%;*/
}

.fw-bold {
    font-weight: bold;
}

.center-text {
    text-align: center;
}

.img-banner {
    width: 100%;
}

/*TODO: Figure out how to change navbar color. 
Hint selector spefificity.*/
/* #navbar.navbar.navbar-inverse {
    background-color: var(--primary);
}

#navbar.navbar.navbar-inverse nav {
    color: #000;
} */

#page-content {
    min-height: 500px;
}

#quiz-box {
    padding-bottom: 3cm;
}

.my-btn {
    margin: 8px 8px 5px 5px;
}

.width23{
    width: 23%;
}


/*Footer style*/
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
footer {
    outline-offset: 20px;
    background: rgba(255,213,126,0.7);
    width: 100%;
    height: 350px;
}
.main-content{
    display: flex;
    padding-top: 15px;
}
.first-column img{
    height: 300px;
    padding-left: 5%;
}
.second-column{
    margin-left: 10%;
}
.second-column h1{
    font-family: "GlacialIndifferenceBold";
    font-size: 30px;
    text-transform: uppercase;
    color: #FC8476;
}
.content img{
    height: 50px;
}
.third-column{
    margin-left: 7%;
}
.third-column h1{
    font-family: "GlacialIndifferenceBold";
    font-size: 30px;
    text-transform: uppercase;
    color: #FC8476;
}
.row{
    display: flex;
}
.row label{
    padding-left: 10px;
}
.forth-column{
    margin-left: 15%;
}
.forth-column h1{
    font-family: "GlacialIndifferenceBold";
    font-size: 30px;
    text-transform: uppercase;
    color: #FC8476;
}
.content{
    font-size: 25px;
    max-width: 350px;
}
.rows{
    display: flex;
    margin-top: 20px;
}
.rows label{
    margin-top: 10px;
    padding-left: 5px;
}
.copyright{
    left: 50%;
    text-align: center;
    font-size: 18px;
}
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/

.carousel-inner > .item > img,
.carousel-inner > .item > a > img {
    width: 35%;
    margin: auto;
}

